--- a/mail_login.links.task.yml
+++ b/mail_login.links.task.yml
@@ -1,6 +1,4 @@
 mail_login.admin:
   route_name: mail_login.admin
-  title: 'Mail Login'
-  description: 'Configurations for Mail Login.'
-  base_route: entity.user.admin_form
-  weight: 0
+  title: Mail Login
+  base_route: mail_login.admin
