Issue #3257997 by morvaim, mqanneh: Missing schema for mail_login.settings:mail_login_password_only_description

--- a/config/install/mail_login.settings.yml
+++ b/config/install/mail_login.settings.yml
@@ -5,3 +5,4 @@ mail_login_username_title: 'Login by username/email address'
 mail_login_username_description: 'You can use your username or email address to login.'
 mail_login_email_only_title: 'Login by email address'
 mail_login_email_only_description: 'You can use your email address only to login.'
+mail_login_password_only_description: 'Enter the password that accompanies your email address.'
