--- a/config/install/mail_login.settings.yml
+++ b/config/install/mail_login.settings.yml
@@ -6,3 +6,7 @@ mail_login_username_description: 'You can use your username or email address to 
 mail_login_email_only_title: 'Login by email address'
 mail_login_email_only_description: 'You can use your email address only to login.'
 mail_login_password_only_description: 'Enter the password that accompanies your email address.'
+mail_login_password_reset_username_title: 'Username or email address'
+mail_login_password_reset_username_description: 'Password reset instructions will be sent to your registered email address.'
+mail_login_password_reset_email_only_title: 'Email address'
+mail_login_password_reset_email_only_description: 'Password reset instructions will be sent to your registered email address.'
